--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -3,23 +3,6 @@
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
 
-# hide layer changes that are momentary (using &mo, &lt etc.) from the layer widget (reduces the number of partial refreshes)
-# CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
-
-# a periodic full display refresh (to clear up ghosting)
-# CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=10
-
-# invert displays to white-on-black instead of black-on-white
-CONFIG_ZMK_DISPLAY_INVERT=y
-
-# hide the "LAYER" heading in the layer widget and realign all widgets
-# CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
-
-# options to select different logo images to replace the "Corne-ish Zen" logo on the right half
-# CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_ZMK=y
-# CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_LPKB=y
-# CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_MIRYOKU=y
-
 # sleep timeout in mills (1,800,000ms = 30*60*1,000ms = a half hour)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
@@ -28,3 +11,23 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # clears all bond information from the keyboard on startup
 # CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+
+#------------------------------------------------------------------------------------------------------
+# custom configuration via https://gist.github.com/caksoylar/c411313990978e1903c244f03039187a
+
+# hide layer changes that are momentary (using &mo, &lt etc.) from the layer widget (reduces the number of partial refreshes)
+CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
+
+# a periodic full display refresh (to clear up ghosting)
+CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=30
+
+# invert displays to white-on-black instead of black-on-white
+CONFIG_IL0323_INVERT=y
+
+# hide the "LAYER" heading in the layer widget and realign all widgets
+CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
+
+# options to select different logo images to replace the "Corne-ish Zen" logo on the right half
+# CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_ZMK=y
+CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_LPKB=y
+# CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_MIRYOKU=y
