disable refreshing display periodically

--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -19,7 +19,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
 
 # a periodic full display refresh (to clear up ghosting)
-CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=30
+#CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=30
 
 # invert displays to white-on-black instead of black-on-white
 CONFIG_IL0323_INVERT=y
